# trame-colormap

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  setup.cfg  setup.py  vue.config.js
colormapper/: module.py  widget.py
tests/: test_import.py
trame/: engine.py  module.py  ui.py  widget.py
vue/: package-lock.json  package.json  vue.config.js
vue/src/: main.ts
