[metadata]
name = colormapper
version = 1.0.0
description = A colormap editor widget for trame
long_description = file: README.md
long_description_content_type = text/x-rst
author = Trame Developer
license = Apache Software License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = colormapper
package_data =
    = build/*
include_package_data = True
install_requires =
    trame_client
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck
[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
